# GameGeometry

./: CMakeLists.txt  LICENSE  README.md
include/: geometry_include.h  math_include.h
include/math/: math_util.h  matrix_types.h  vector_types.h
include/math/geometry/: bounding2d.h  circle.h  collision2d.h  distance2d.h  geometry2d.h  geometry_util.h  intersections2d.h  line_segment2d.h  lines2d.h  polygon2d.h  shape2d.h  shapes2d.h
src/math/: math_util.cpp  matrix_types.cpp  vector_types.cpp
src/math/geometry/: bounding2d.cpp  circle.cpp  collision2d.cpp  geometry2d.cpp  geometry_util.cpp  intersections2d.cpp  line_segment2d.cpp  lines2d.cpp  polygon2d.cpp  shape2d.cpp
test/: globalTestDefinitions.h  intersectionTest.cpp  matrixTest.cpp  shape2dTest.cpp  testVector.cpp  vectorTest.cpp
